--- a/bsmtrace.1
+++ b/bsmtrace.1
@@ -22,7 +22,7 @@
 .\" LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
-.Dd April 04, 2007
+.Dd February 01, 2020
 .Dt BSMTRACE 1
 .Os FreeBSD 6.2
 .Sh NAME
@@ -34,6 +34,7 @@
 .Op Fl a Ar trail
 .Op Fl f Ar config_file
 .Op Fl p Ar pid_file
+.Op Fl z Ar zone_config_dir
 .Sh DESCRIPTION
 BSMtrace is a utility that processes audit trails, or real-time audit feeds
 provided by audit pipes.  It loads a set of finite state machines or
@@ -66,6 +67,11 @@ Print this help message.
 Location of pid file.
 .It Fl v
 Print version and exit.
+.It Fl z Pa zone_config_dir
+Location of the zone config directory.
+Files in this directory should be named like
+.Pa <zone>.conf ,
+and they will be read in and applied for the corresponding zone.
 .El
 .Sh DIAGNOSTICS
 .Ex -std
